kustomize/registry/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: registry
  namespace: registry
spec:
  containers:
    - name: registry
      image: nginx
      volumeMounts:
      - mountPath: "/data-internal"
        name: registry-data
  volumes:
    - name: registry-data
      persistentVolumeClaim:
        claimName: registry
